# Smart-Frames-Distiller

./: .gitignore  ARCHITECTURE.md  DOCUMENTATION.md  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  RESEARCH.md  TIER1_Documentation.md  action_model.py  audio_filter.py  benchmark.py  chunk_exporter.py  config.example.json  config.json  correlation_plot.py  day_night_detector.py  face_recognizer.py  fix_large_files.bat  fr_annotate.py  fr_core.py  fr_discover.py  fr_ingest.py  fr_inspect.py  fr_merge.py  fr_milvus.py  fr_onboard.py  fr_tag.py  ir_filter.py  kafka_producer.py  loop_test.py  main.py  parallel_filter.py  preprocess.py  pyproject.toml  requirements.txt  roi_loader.py  rtsp_stream.py  runner.py  selector.py  test_faces_unit.py  (+3 more)
common/: benchmark.py  metrics.py  selection.py  synthetic.py  types.py  video_io.py  visualize.py
detectors/: ir_motion_detector.py
faces/: __init__.py  annotate.py  engine.py  persons.py  service.py  store.py  tracker.py
server/: __init__.py  app.py  errors.py  jobs.py  model_cache.py  schemas.py  settings.py  stream_manager.py
server/routers/: faces.py  health.py  jobs.py  streams.py
